--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.5.0",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^5.21.1",
     "@types/node": "20.2.5",
@@ -18,8 +19,8 @@
     "autoprefixer": "10.4.14",
     "clsx": "^2.1.1",
     "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
-    "next": "13.4.4",
+    "eslint-config-next": "13.4.7",
+    "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
