--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
+    "nodemailer": "^6.9.16",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -35,6 +36,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.17",
     "prisma": "^5.21.1"
   }
 }
