--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
+    "react-markdown": "^9.0.1",
     "react-p5": "^1.4.1",
+    "react-syntax-highlighter": "^15.6.1",
+    "remark-gfm": "^4.0.0",
     "sqlite3": "^5.1.7",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
@@ -37,6 +40,7 @@
   },
   "devDependencies": {
     "@types/nodemailer": "^6.4.17",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "prisma": "^5.21.1"
   }
 }
