--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.7",
+    "lodash": "^4.17.21",
     "next": "13.4.7",
     "nodemailer": "^6.9.16",
     "postcss": "8.4.24",
