--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "clsx": "^2.1.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.7",
-    "lodash": "^4.17.21",
     "next": "13.4.7",
     "nodemailer": "^6.9.16",
     "postcss": "8.4.24",
+    "primereact": "^10.8.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.2",
