--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^5.21.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
@@ -42,6 +43,8 @@
   "devDependencies": {
     "@types/nodemailer": "^6.4.17",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
     "prisma": "^5.21.1"
   }
 }
