--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "lint": "next lint --fix",
+    "postinstall": "prisma generate",
+    "prepare": "husky"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
@@ -44,6 +45,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react-syntax-highlighter": "^15.5.13",
     "babel-jest": "^29.7.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "prisma": "^5.21.1"
   }
