--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start",
     "lint": "next lint --fix",
     "postinstall": "prisma generate",
-    "prepare": "husky"
+    "prepare": "husky",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore .",
+    "test": "npx jest"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
@@ -47,6 +50,7 @@
     "babel-jest": "^29.7.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "prettier": "^3.4.2",
     "prisma": "^5.21.1"
   }
 }
