--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --fix",
+    "lint": "next lint",
     "postinstall": "prisma generate",
     "prepare": "husky",
     "format": "prettier --check --ignore-path .gitignore .",
@@ -23,9 +23,7 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "clsx": "^2.1.1",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.7",
-    "next": "13.4.7",
+    "next": "^13.5.7",
     "nodemailer": "^6.9.16",
     "postcss": "8.4.24",
     "primereact": "^10.8.5",
@@ -40,6 +38,7 @@
     "remark-gfm": "^4.0.0",
     "sqlite3": "^5.1.7",
     "tailwindcss": "3.3.2",
+    "ts-node": "^10.9.2",
     "typescript": "5.1.3",
     "uuid": "^9.0.0",
     "zod": "^3.23.8"
@@ -48,6 +47,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react-syntax-highlighter": "^15.5.13",
     "babel-jest": "^29.7.0",
+    "globals": "^15.13.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
