--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "@aws-sdk/client-s3": "^3.717.0",
+    "@aws-sdk/cloudfront-signer": "^3.709.0",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^5.21.1",
     "@types/jest": "^29.5.14",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "10.4.14",
     "clsx": "^2.1.1",
+    "jimp": "^1.6.0",
     "next": "^13.5.7",
     "nodemailer": "^6.9.16",
     "postcss": "8.4.24",
@@ -37,10 +41,11 @@
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.0",
     "sqlite3": "^5.1.7",
+    "swr": "^2.3.0",
     "tailwindcss": "3.3.2",
     "ts-node": "^10.9.2",
     "typescript": "5.1.3",
-    "uuid": "^9.0.0",
+    "uuid": "^9.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
