--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
+    "react-loader-spinner": "^6.1.6",
     "react-markdown": "^9.0.1",
     "react-p5": "^1.4.1",
     "react-syntax-highlighter": "^15.6.1",
