--- a/package.json
+++ b/package.json
@@ -5,33 +5,40 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start  --port 3001",
     "lint": "next lint",
     "postinstall": "prisma generate",
     "prepare": "husky",
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore .",
-    "test": "npx jest"
+    "test": "vitest run",
+    "test-ui": "vitest --ui",
+    "test-coverage": "vitest --coverage"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^3.5.0",
     "@aws-sdk/client-s3": "^3.717.0",
     "@aws-sdk/cloudfront-signer": "^3.709.0",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^5.21.1",
-    "@types/jest": "^29.5.14",
+    "@radix-ui/react-slot": "^1.1.1",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "jimp": "^1.6.0",
+    "jose": "^5.9.6",
+    "lucide-react": "^0.474.0",
     "next": "^13.5.7",
     "nodemailer": "^6.9.16",
     "postcss": "8.4.24",
     "primereact": "^10.8.5",
     "react": "18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
@@ -43,20 +50,29 @@
     "remark-gfm": "^4.0.0",
     "sqlite3": "^5.1.7",
     "swr": "^2.3.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "typescript": "5.1.3",
     "uuid": "^9.0.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/nodemailer": "^6.4.17",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "babel-jest": "^29.7.0",
+    "@vitest/coverage-v8": "^3.0.0",
+    "@vitest/ui": "^3.0.0",
     "globals": "^15.13.0",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
+    "jsdom": "^26.0.0",
     "prettier": "^3.4.2",
-    "prisma": "^5.21.1"
+    "prisma": "^5.21.1",
+    "vitest": "^3.0.0"
   }
 }
