--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,11 @@
 {
-  "endOfLine": "lf",
-  "bracketSpacing": true,
-  "printWidth": 100,
-  "semi": false,
-  "singleQuote": false,
-  "tabWidth": 2,
-  "trailingComma": "all"
+	"endOfLine": "lf",
+	"bracketSpacing": true,
+	"printWidth": 100,
+	"semi": false,
+	"singleQuote": false,
+	"tabWidth": 2,
+	"trailingComma": "all",
+	"tabs": true,
+	"useTabs": true
 }
