--- a/package.json
+++ b/package.json
@@ -71,8 +71,9 @@
 		"@typescript-eslint/eslint-plugin": "^8.23.0",
 		"@vitest/coverage-v8": "^3.0.0",
 		"@vitest/ui": "^3.0.0",
-		"eslint": "^8.57.1",
+		"eslint": "^9.19.0",
 		"eslint-config-next": "^15.1.6",
+		"eslint-plugin-prettier": "^5.2.3",
 		"eslint-plugin-react": "^7.37.4",
 		"globals": "^15.14.0",
 		"husky": "^9.1.7",
